--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -15,7 +15,9 @@
         <a href="/E-MailSender/public/user/user" class="nav-link">User Manage</a>
       </li>
     <li class="nav-item">
-        <a href="{{ path('app_logout') }}" class="nav-link">Logout</a>
+    <div id="show">
+    <a href="{{ path('app_logout') }}" class="nav-link">Log out</a>
+    </div>
       </li>
     </ul>
   </div>
